--- a/exercise12.tex
+++ b/exercise12.tex
@@ -70,7 +70,8 @@ Explain how these values are obtained and verify \eqref{dk2}.
 \end{enumerate}
 
 \item
-Write a program that implements WENO reconstruction for both $k=2,3$. The indicators $\beta_r$ for $k=3$ are in the lecture notes.
+Write a program that implements WENO reconstruction for both $k=2,3$.
+% The indicators $\beta_r$ for $k=3$ are in the lecture notes. %TODO
 
 \item Write a finite volume code for
 \[
