--- a/exercise05.tex
+++ b/exercise05.tex
@@ -1,139 +1,501 @@
-\documentclass{article}
+\documentclass[10pt,letterpaper]{article}
+\usepackage[english]{babel}
+\usepackage{graphicx}
+\usepackage[margin=2cm]{geometry}
+
+\usepackage{float}
+\usepackage{subfloat}
+\usepackage{caption}
+\usepackage{subcaption}
+\usepackage{listings}
+
+\usepackage{mathtools}
+\usepackage{amsfonts}
+\usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{amsthm}
+\newcommand{\dif}[1][]{\mathrm{d} {#1}\,}
+\newcommand{\rb}[1]{ \left(  {#1} \right) }
+\newcommand{\frb}[1]{ \left(  {#1} \right) }
+\newcommand{\norm}[1]{ \left\|  {#1} \right\| }
+\newcommand{\jph}{{j+\frac{1}{2}}}
+\newcommand{\jmh}{{j-\frac{1}{2}}}
 
 
+% \usepackage[amsmath,thmmarks,standard]{ntheorem}
+\newtheoremstyle{break}
+{\topsep}
+{\topsep}%
+{\normalfont}
+{}%
+{\bfseries}
+{}%
+{\newline}
+{}%
+\theoremstyle{break}
+\newtheorem{exercise}{Exercise}
+\newtheorem*{information}{Information}
+\newtheorem{solution}{Solution}
+\newtheorem*{solutioninformation}{Solution Information}
 
-\usepackage{../auxFiles/ExStyPac}
-
-
-
-\input ../auxFiles/mac.tex
-\graphicspath{{./figures/}}
-
-
-
-
-
-%========================================================================
 \begin{document}
 
+\title{Conservative Methods}
+\date{}
 
-
-\Head{5}{Conservative Methods}
-
-
-
-
-
-\begin{exerciseList}
-
-
-\item
-Answer the following questions:
-\begin{enumerate}
-\item
-When is a numerical method said to be conservative?
-
-\item
-What is the benefit of using a conservative numerical method? (Hint: Take a look at the Lax-Wendroff Theorem)
-
-\item
-For a given conservation law and a conservative scheme, are we guaranteed that the weak solution obtained satisfies the entropy condition?
-\end{enumerate}
-
-\item
-Consider the conservative scheme with the \textit{Engquist-Osher} flux
-\begin{gather}
-F^{EO}(u,v) = \frac{1}{2} \rb{ f(u) + f(v) - \int \limits_u^v |f^\prime(\xi)|  d\xi}.
-\end{gather}
-\begin{enumerate}
-\item Show that the numerical flux leads to a monotone scheme under suitable CFL conditions.
-
-\item Assuming $f$ is convex with a single minima at $\omega$, show that the Engquist-Osher flux reduces to
-\begin{gather}
-F^{EO}(u,v) = f(\max(u,\omega)) + f(\min(v,\omega)) - f(\omega).
-\end{gather}
-\end{enumerate}
-
-
-\item
-In the previous exercises, we have seen that difficulties can arise when trying to approximate solution for linear problem. Additional issues can arise when dealing with non-linear problems. Consider the Burgers equation in the quasilinear form
-\begin{gather} \label{quasiLinBurg}
-	u_{t}+uu_{x}=0\ .
-\end{gather}
-A ``natural'' finite difference method can be obtained with a minor modification of the upwind method applied to the advection equation, assuming $v_{j}^{n}\geq0$ for all $j,n$:
-\begin{gather} \label{quasiLinUpWind}
-	v_{j}^{n+1}=v_{j}^{n}-\frac{k}{h}v_{j}^{n}\left(v_{j}^{n} -v_{j-1}^{n}\right).
-\end{gather}
-This method converges on smooth solutions.
-\begin{enumerate}
-\item
-Compute the numerical solution obtained by \eqref{quasiLinUpWind}, driven by the initial condition
-\begin{gather} \label{inCond1}
-	u(x,0)=\begin{cases}
-			1\; & x<0\\
-			0\; & x\geq0
-		\end{cases}\ .
-\end{gather}
-Implement the method in Matlab and solve \eqref{quasiLinBurg} up to $T=0.5$ in the interval $(-1,1)$ with initial condition \eqref{inCond1}. In your computations use $k=0.5h$, $h=0.01$.
-
-
-\item
-Is the solution obtained a weak solution? Is it the entropy
-solution?
-
-\item
-Now use the following initial condition in your code 
-\begin{gather} \label{inCond2}
-	u\left(x,0\right)=\begin{cases}
-			1.2\; & x<0\\
-			0.4\; & x\geq0
-		\end{cases}\ .
-\end{gather}
-
-\item
-Compare the solution to the known entropy solution for Burgers, which can be constructed by considering the characteristics and shocks.
-\end{enumerate}
-
-
-\item
-\begin{enumerate}
-\item
-Apply the generalization of the Lax-Friedrichs method
-\begin{gather}
-	v_{j}^{n+1}=\frac{1}{2}\rb{v_{j+1}^{n}+v_{j-1}^{n}}
-		-\frac{k}{2h}\rb{f\frb{v_{j+1}^{n}}-f\frb{v_{j-1}^{n}}}
-\end{gather}
-to Burgers equation in conservation form,
-\begin{gather}
-	u_t+\rb{\frac{1}{2}\, u^2}_x=0\ ,
-\end{gather}
-with the initial conditions \eqref{inCond1} and \eqref{inCond2}.
-
-\item
-Does the numerical solutions converge to a weak solution?
-
-\item
-Is this the entropy solution?
-
-\item
-Show that the generalization of the Lax-Friedrichs method to nonlinear conservation laws can be written in conservative form.
-\end{enumerate}
-
-\item
-\begin{enumerate}
-\item
-Solve the Burgers equation with the Engquist-Osher flux and the initial conditions \eqref{inCond1} and \eqref{inCond2}.
-
-\item
-Does the solution converge to the entropy solution?
-
-\item
-How does the solution compare to that obtained with the Lax-Friedrichs scheme?
-
-\end{enumerate}
+\maketitle
 
 
 
-\end{exerciseList}
+
+
+
+
+
+
+
+
+
+
+
+
+\begin{exercise}
+	Answer the following questions:
+	\begin{enumerate}
+		\item
+		When is a numerical method said to be conservative?
+
+		\item
+		What is the benefit of using a conservative numerical method? (Hint: Take a look at the Lax-Wendroff Theorem)
+
+		\item
+		For a given conservation law and a conservative scheme, are we guaranteed that the weak solution obtained satisfies the entropy condition?
+	\end{enumerate}
+\end{exercise}
+
+\begin{solution}
+	\begin{enumerate}
+		\item
+		If it can be written in the form
+		\begin{gather} \label{consForm}
+			v_{j}^{n+1}=v_{j}^{n}-\frac{k}{h}\left[F^n_\jph-F^n_\jmh\right]
+		\end{gather}
+		where $F^n_\jph = F(U^n_{j-p},...,U^n_{j+q})$ is the numerical flux at the cell-interface $x_\jph$. 
+		
+		\item
+		By the Lax-Wendroff theorem, if a sequence of numerical approximations obtained by a conservative scheme (with a consistent and Lipschitz-continous numerical flux) converges, the limit is a weak solution.
+		%We do not have to worry about the scheme returning non-solutions, weak-solutions can be guaranteed.
+		
+		\item
+		No, not in general. Roe's approximate Riemann solver is an example of a conservative scheme that may give-entropy violating weak solutions. Thus, several \textit{entropy-fixes} have been proposed for the Roe scheme (some of which you will see in class).
+	\end{enumerate}
+\end{solution}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\begin{exercise}
+	Consider the conservative scheme with the \textit{Engquist-Osher} flux
+	\begin{gather}
+	F^{EO}(u,v) = \frac{1}{2} \rb{ f(u) + f(v) - \int \limits_u^v |f^\prime(\xi)|  d\xi}.
+	\end{gather}
+	\begin{enumerate}
+	\item Show that the numerical flux leads to a monotone scheme under suitable CFL conditions.
+
+	\item Assuming $f$ is convex with a single minima at $\omega$, show that the Engquist-Osher flux reduces to
+	\begin{gather}
+	F^{EO}(u,v) = f(\max(u,\omega)) + f(\min(v,\omega)) - f(\omega).
+	\end{gather}
+	\end{enumerate}
+\end{exercise}
+
+\begin{solution}
+	\begin{enumerate}
+		\item
+		To show that the Engquist-Osher flux (EO flux) leads to a monotone scheme, we need to show that
+		\begin{align} \label{eqn:m_flux}
+			\lambda \partial_1F(U^n_{j-1},U^n_j) &\geq 0\\
+			-\lambda \partial_2F(U^n_{j},U^n_{j+1}) &\geq 0\\
+			1 - \lambda ( \partial_1F(U^n_{j},U^n_{j+1}) - \partial_2F(U^n_{j-1},U^n_j) ) &\geq 0
+		\end{align}
+		where $\lambda = k/h$. Now for the EO flux, we have
+		\begin{gather}
+		\partial_1 F(a,b) = \frac{1}{2} \left( f^\prime(u) + |f^\prime(u)| \right) \geq 0, \qquad 
+		\partial_2 F(a,b) = \frac{1}{2} \left( f^\prime(v) - |f^\prime(v)| \right) \leq 0.
+		\end{gather}
+		Thus, the first two conditions of \eqref{eqn:m_flux} are clearly satisfied. For the last condition of \eqref{eqn:m_flux} to hold, we want
+		\begin{gather}
+		1 - \lambda ( \partial_1F(U^n_{j},U^n_{j+1}) - \partial_2F(U^n_{j-1},U^n_j) ) = 1 - \lambda |f^\prime(u)| \geq 0 
+		\end{gather}
+		which gives us the expected CFL condition, i.e., we must choose a time-step such that $\lambda |f^\prime(u)| \leq 1$.
+		
+		\item Assume $f$ is convex with a minima at $\omega$. Then we have $f^\prime(u) < 0$ if $u < \omega$ and $f^\prime(u) > 0$ if $u > \omega$. Considering 4 possible scenarios, we have
+		\begin{align}
+			\int \limits_u^v |f^\prime(\xi) | d \xi = \begin{cases}
+				f(v) - f(u), & \quad \text{if } u,v > \omega\\
+				f(u) - f(v), & \quad \text{if } u,v < \omega\\
+				f(u) + f(v) - 2f(\omega), & \quad \text{if } u < \omega < v \\
+				2 f(\omega) - f(u) - f(u), & \quad \text{if } v < \omega < u
+			\end{cases}.
+		\end{align}
+		Thus, the numerical flux becomes 
+		\begin{align}
+			F^{EO}(u,v) =& \begin{cases}
+			f(u), & \quad \text{if } u,v > \omega\\
+			f(v), & \quad \text{if } u,v < \omega\\
+			f(\omega), & \quad \text{if } u < \omega < v \\
+			f(u) + f(v) - f(\omega), & \quad \text{if } v < \omega < u
+			\end{cases}\\
+			=& f(\max(u,\omega)) + f(\min(v,\omega)) - f(\omega).
+		\end{align}
+	\end{enumerate}
+\end{solution}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\begin{exercise}
+	In the previous exercises, we have seen that difficulties can arise when trying to approximate solution for linear problem. Additional issues can arise when dealing with non-linear problems. Consider the Burgers equation in the quasilinear form
+	\begin{gather} \label{quasiLinBurg}
+		u_{t}+uu_{x}=0\ .
+	\end{gather}
+	A ``natural'' finite difference method can be obtained with a minor modification of the upwind method applied to the advection equation, assuming $v_{j}^{n}\geq0$ for all $j,n$:
+	\begin{gather} \label{quasiLinUpWind}
+		v_{j}^{n+1}=v_{j}^{n}-\frac{k}{h}v_{j}^{n}\left(v_{j}^{n} -v_{j-1}^{n}\right).
+	\end{gather}
+	This method converges on smooth solutions.
+	\begin{enumerate}
+		\item
+		Compute the numerical solution obtained by \eqref{quasiLinUpWind}, driven by the initial condition
+		\begin{gather} \label{inCond1}
+			u(x,0)=\begin{cases}
+					1\; & x<0\\
+					0\; & x\geq0
+				\end{cases}\ .
+		\end{gather}
+		Implement the method in Matlab and solve \eqref{quasiLinBurg} up to $T=0.5$ in the interval $(-1,1)$ with initial condition \eqref{inCond1}. In your computations use $k=0.5h$, $h=0.01$.
+
+
+		\item
+		Is the solution obtained a weak solution? Is it the entropy
+		solution?
+
+		\item
+		Now use the following initial condition in your code 
+		\begin{gather} \label{inCond2}
+			u\left(x,0\right)=\begin{cases}
+					1.2\; & x<0\\
+					0.4\; & x\geq0
+				\end{cases}\ .
+		\end{gather}
+
+		\item
+		Compare the solution to the known entropy solution for Burgers, which can be constructed by considering the characteristics and shocks.
+	\end{enumerate}
+\end{exercise}
+
+\begin{solution}
+	\begin{enumerate}
+
+		\item The code is attached at the end of this document.
+		\item The entropy solution for the for the initial condition
+		\begin{gather}
+		u(x,0) = \begin{cases} 1 \quad \text{if } x\leq 0 \\0 \quad \text{if } x\geq 0 \end{cases},
+		\end{gather}
+		corresponds to a shock moving in the positive direction with a speed $s=0.5$.
+		The numerical solution with the ``upwind'' scheme converges to the function $w(x,t)=u(x,0)$. This is clearly not the entropy solution. In fact, the solution is not even a weak solution of the conservation law, since the shock-speed does not satisfy the RH condition. We can also see this
+		this take any $0\leq T_{1}<T_{2}$. Then 
+		\begin{gather}
+			\int_{-1}^{1}w\frb{x,T_{2}}dx-\int_{-1}^{1}w\frb{x,T_{1}}dx=0
+		\end{gather}
+		while
+		\begin{gather}
+			\int_{T_{1}}^{T_{2}}f\frb{w\frb{1,t}}dt -\int_{T_{1}}^{T_{2}}f\frb{w\frb{-1,t}}dt
+				=\int_{T_{1}}^{T_{2}}f\frb{0}dt-\int_{T_{1}}^{T_{2}}f\frb{1}dt
+				=\frac{T_{2}-T_{1}}{2}>0\ .
+		\end{gather}
+		
+		\item
+		See figures generated by the code attached at the end of the solution manual.
+		
+		\item
+		The entropy solution is given by 
+		\begin{gather}
+			u(x,t)=\begin{cases}
+				1.2 & x<0.8t\\
+				0.4 & 0.8t<x
+			\end{cases}
+		\end{gather}
+		which is a shock moving in the positive x-direction with a speed $s=0.8$. 
+		Notice that in this example, the numerical solution is a discontinuous traveling wave that travels in the correct direction, but at a speed different than the actual shock speed. Since the shock speed is not correct, the RH condition will not be satisfied. Thus, the solution will not converge to a weak solution. 
+		
+		The important thing to note here is that in the two examples presented in the exercise, the upwind inspired method, which can be proven to work well for smooth solutions, returned solutions which are not weak-solution! This is the motivation for using conservative methods; when applying a conservative method we are guaranteed that if the method converges, the limit is a weak solution to the problem.
+	\end{enumerate}
+\end{solution}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\begin{exercise}
+	\begin{enumerate}
+		\item
+		Apply the generalization of the Lax-Friedrichs method
+		\begin{gather}
+			v_{j}^{n+1}=\frac{1}{2}\rb{v_{j+1}^{n}+v_{j-1}^{n}}
+				-\frac{k}{2h}\rb{f\frb{v_{j+1}^{n}}-f\frb{v_{j-1}^{n}}}
+		\end{gather}
+		to Burgers equation in conservation form,
+		\begin{gather}
+			u_t+\rb{\frac{1}{2}\, u^2}_x=0\ ,
+		\end{gather}
+		with the initial conditions \eqref{inCond1} and \eqref{inCond2}.
+
+		\item
+		Does the numerical solutions converge to a weak solution?
+
+		\item
+		Is this the entropy solution?
+
+		\item
+		Show that the generalization of the Lax-Friedrichs method to nonlinear conservation laws can be written in conservative form.
+	\end{enumerate}
+\end{exercise}
+
+\begin{solution}
+	\begin{enumerate}
+		\item
+		See figures generated by the code
+		attached at the end of the solution manual.
+		
+		\item[(b),(c)]
+		\addtocounter{enumii}{2}
+		Yes, the numerical solutions converge to the entropy solution. This is because the numerical scheme is monotone (try to show this).
+		
+		
+		
+		\item
+		A scheme is conservative if it can be written as \eqref{consForm}.
+		The Lax-Friedrichs scheme is usually written as 
+		\begin{gather}
+			v_{j}^{n+1}=\frac{1}{2}\left(v_{j+1}^{n}+v_{j-1}^{n}\right)
+				-\frac{k}{2h}\left(f\frb{v_{j+1}^{n}}-f\frb{v_{j-1}^{n}}\right)\ .
+		\end{gather}
+		We can rewrite it as 
+		\begin{align}
+			v_{j}^{n+1}-v_{j}^{n}= & \frac{1}{2}\left[\left(v_{j+1}^{n}-v_{j}^{n}-\frac{k}{h}f\frb{v_{j+1}^{n}}\right)
+					-\left(v_{j}^{n}-v_{j-1}^{n}-\frac{k}{h}f\frb{v_{j-1}^{n}}\right)\right]\\[0.5em]
+				= & -\frac{k}{h}\left[ \left( -\frac{h}{2k}\left(v_{j+1}^{n}-v_{j}^{n}\right)
+						+\frac{1}{2}f\frb{v_{j+1}^{n}}\right)
+					-\left(-\frac{h}{2k}\left(v_{j}^{n}-v_{j-1}^{n}\right)
+						+\frac{1}{2}f\frb{v_{j-1}^{n}}\right)\right]\ .
+		\end{align}
+		Thus, to obtain conservation we take
+		\begin{gather}
+			F\frb{u,v}= \frac{1}{2}\left(f(v)+f(u)\right) -\frac{h}{2k}\left(v-u\right)\ .
+		\end{gather}
+	\end{enumerate}
+\end{solution}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\begin{exercise}
+	\begin{enumerate}
+		\item
+		Solve the Burgers equation with the Engquist-Osher flux and the initial conditions \eqref{inCond1} and \eqref{inCond2}.
+
+		\item
+		Does the solution converge to the entropy solution?
+
+		\item
+		How does the solution compare to that obtained with the Lax-Friedrichs scheme?
+
+	\end{enumerate}
+\end{exercise}
+
+\begin{solution}
+	\begin{enumerate}
+		\item
+		See figures generated by the code
+		attached at the end of the solution manual.
+		
+		\item
+		Yes, the numerical solutions converge to the entropy solution, as the numerical scheme is monotone (you have shown this above).
+		
+		
+		
+		\item
+		Both the Engquist-Osher flux and Lax-Friedrich flux can be written as
+		\begin{gather}
+		F(u,v) = \frac{1}{2} (f(u) + f(v)) - \frac{1}{2} Q(u,v) (v-u),
+		\end{gather}
+		where $Q(u,v)$ is a measure of the artificial viscosity/dissipation introduced by the scheme. For these two schemes, we have
+		\begin{gather}
+		Q^{LF}(u,v) = \frac{h}{k}, \quad Q^{EO}(u,v) = \frac{\int \limits_u^v |f^\prime(\xi) | d \xi }{v-u}.
+		\end{gather}
+		Under the CFL condition $k \max |f^\prime(u)| / h \leq 1$, we have $Q^{EO}(u,v) \leq Q^{LF}(u,v)$  (try to show this). Thus, the Engquist-Osher scheme tends to be less dissipative compared to the Lax-Friedrichs scheme. This can be observed from the numerical results obtained using the code below.
+	\end{enumerate}
+\end{solution}
+
+
+
+
+
+
+
+
+
+
+\newpage
+\begin{lstlisting}
+% Solution04: Problem 3, 4 and 5
+% This script was written for EPFL MATH459, Numerical Methods for
+% Conservation Laws. The invisvid burgers equation is solved using two 
+% different sets of initial condtions using an
+% upwind inspired scheme, EO flux and the generalized Lax-Friedrichs scheme. 
+% The first method is non-conservative, while the next two are conservative. 
+
+clc
+clear all
+close all
+
+% Initial left and right states for the Riemann Problem
+% u0(x) = ul if x<0.0, ur if x>0.0
+ul = 1.2;  ur = 0.4; 
+
+
+% Discretization	
+h  = 0.01;
+k  = 0.5*h;
+x  = -0.5:h:1;
+nX = numel(x);
+t  = 0:k:0.5;
+nT = numel(t);
+
+% Initial condition
+U0 = ul*(x<0) + ur*(x>=0);
+
+% U1 --> solution of Upwind inspired scheme
+% U2 --> solution with EO flux
+% U3 --> solution of Generalized Lax-Friedrichs scheme
+U1 = U0; 
+U2 = U0;
+U3 = U0;
+
+% EO flux (minima of Burgers flux at u=0)
+EOflux =@(u,v) max(u,0).^2/2 + min(v,0).^2/2 - 0; 
+
+
+% Shock speed
+s  = (ul+ur)/2; 
+
+for i = 1:nT
+    
+    % Create extended solution arrays
+    U1_ext = [U1(1),U1,U1(end)];
+    U2_ext = [U2(1),U2,U2(end)];
+    U3_ext = [U3(1),U3,U3(end)];
+    
+	% Update solutions
+	U1 = U1 - (k/h) * U1_ext(2:end-1).* (U1_ext(2:end-1) - U1_ext(1:end-2));
+    
+    EOfluxeval = EOflux(U2_ext(1:end-1),U2_ext(2:end));
+    U2 = U2 - (k/h) * (EOfluxeval(2:end) - EOfluxeval(1:end-1)); 
+    
+	U3 = ( U3_ext(3:end) + U3_ext(1:end-2))/2 - ...
+         (0.5*k/h) * ( U3_ext(3:end).^2 - U3_ext(1:end-2).^2 )/2;
+	
+    % The true solution, shock speed calculated using Huginiot jump condition
+	U_exact = ul*(x<s*t(i)) + ur*(x>=s*t(i));
+    
+	% Visualize the numerical approximation and the correct solution
+	plot(x,U1,'-r','LineWidth',2)
+    hold all
+    plot(x,U2,'-b','LineWidth',2)
+    plot(x,U3,'-m','LineWidth',2)
+    plot(x,U_exact,'-k','LineWidth',2)
+	ylim([-0.25 1.75]);xlim([-0.5 1]);
+	set(gca,'XTick',-0.5:0.5:1);set(gca,'YTick',0:0.5:1.5,'FontSize',15)
+	grid on;
+	legend('Upwind inspired','EO','Generalized Lax-Friedrichs','True solution','Location','best')
+    hold off
+	drawnow	
+end
+
+
+
+\end{lstlisting}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 \end{document}
